Made a grammatic correction

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,7 +13,7 @@
             Here are a few lists to get a quick glimpse at who I am.
             </p>
         <h2>
-            Favorite Movie
+            Favorite Movies
         </h2>
             <p>
                 <ul>
