Made a change to list items

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li>The Iron Giant</li>
                     <li>Treasure Planet</li>
-                    <li>The Princess Bride</li>
+                    <li>The Secret Life of Walter Mitty</li>
                 </ul>
             </p>
     </body>
