Added list items

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -27,7 +27,9 @@
         </h2>
             <p>
                 <ol>
-                    <li></li>
+                    <li>All the Wrong Questions by Lemony Snicket <em>(4 part series)</em></li>
+                    <li>Mr. Penumbra's 24-Hour Bookstore by Robin Sloan</li>
+                    <li>what if? by Randall Munroe</li>
                 </ol>
             </p>
     </body>
