--- a/AboutMe.html
+++ b/AboutMe.html
@@ -32,5 +32,7 @@
                     <li>what if? by Randall Munroe</li>
                 </ol>
             </p>
+        <h2>Drawing Conclusions</h2>
+            <p>Suffice to say I am a <strong>huge</strong> fan of animated movies, mysteries, and feel-good fiction.</p>
     </body>
 </html>
