--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,6 +5,7 @@
     </title>
     
     <body>
+     <header>
         <h1>
         Let Me Introduce Myself
         </h1>
@@ -12,27 +13,36 @@
             <br>
             Here are a few lists to get a quick glimpse at who I am.
             </p>
-        <h3>
+    </header>
+    <article>
+        <section>
+            <h3>
             Favorite Movies <em>(In no particular order)</em>
-        </h3>
-            <p>
+            </h3>
+             <p>
                 <ul>
                     <li>The Iron Giant</li>
                     <li>Treasure Planet</li>
                     <li>The Secret Life of Walter Mitty</li>
                 </ul>
-            </p>
-        <h3>
+             </p>
+        </section>
+        <section>
+            <h3>
             Favorite Books <em>(In a rather particular order)</em>
-        </h3>
-            <p>
-                <ol>
-                    <li>All the Wrong Questions by Lemony Snicket <em>(4 part series)</em></li>
-                    <li>Mr. Penumbra's 24-Hour Bookstore by Robin Sloan</li>
-                    <li>what if? by Randall Munroe</li>
+            </h3>
+             <p>
+                 <ol>
+                     <li>All the Wrong Questions by Lemony Snicket <em>(4 part series)</em></li>
+                     <li>Mr. Penumbra's 24-Hour Bookstore by Robin Sloan</li>
+                     <li>what if? by Randall Munroe</li>
                 </ol>
-            </p>
+             </p>
+        </section>
+    </article>
+    <article>
         <h2>Drawing Conclusions</h2>
             <p>Suffice to say I am a <strong>huge</strong> fan of animated movies, mysteries, and feel-good fiction.</p>
+    </article>
     </body>
 </html>
