--- a/AboutMe.html
+++ b/AboutMe.html
@@ -44,5 +44,11 @@
         <h2>Drawing Conclusions</h2>
             <p>Suffice to say I am a <strong>huge</strong> fan of animated movies, mysteries, and feel-good fiction.</p>
     </article>
+    <select>
+        <option value="Orange">Orange</option>
+        <option value="strawberry">Strawberry</option>
+        <option value="blueberry">Blueberry</option>
+    </select> 
+        
     </body>
 </html>
