--- a/AboutMe.html
+++ b/AboutMe.html
@@ -49,8 +49,8 @@
         <option value="strawberry">Strawberry</option>
         <option value="blueberry">Blueberry</option>
     </select> 
-    <a href="http://www.youtube.com">My Youtube Channel</a>
-    
+    <a href="https://www.youtube.com/channel/UCAWFhV8F8ZMlC6lYh5TTc7A">My Youtube Channel</a>
+
 
         
     </body>
