added empty space

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -50,8 +50,63 @@
         <option value="blueberry">Blueberry</option>
     </select> 
     <br>
+    <br>
     <a href="https://www.youtube.com/channel/UCAWFhV8F8ZMlC6lYh5TTc7A">My Youtube Channel</a>
-
+    <br>
+    <br>
+    <br>
+    <a href="https://www.nypl.org">
+    <img src="https://images.unsplash.com/photo-1606387945281-0485fbcba5f4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1383&q=80" alt="My Image" 
+    width="300" height="300"></a>
+    <img src="C:\Users\joshu\Desktop\GreenLeaf.jpg" alt="Green Leaf" width="300" height="300">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
         
     </body>
