--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,7 +6,7 @@
     
     <body>
      <header>
-        <h1>
+        <h1 id="first">
         Let Me Introduce Myself
         </h1>
             <p>Welcome! My name is Joshua Kenna and I am new to the coding scene.
@@ -19,7 +19,7 @@
             <h3>
             Favorite Movies <em>(In no particular order)</em>
             </h3>
-             <p>
+             <p class="itemList">
                 <ul>
                     <li>The Iron Giant</li>
                     <li>Treasure Planet</li>
@@ -31,7 +31,7 @@
             <h3>
             Favorite Books <em>(In a rather particular order)</em>
             </h3>
-             <p>
+             <p class="itemList">
                  <ol>
                      <li>All the Wrong Questions by Lemony Snicket <em>(4 part series)</em></li>
                      <li>Mr. Penumbra's 24-Hour Bookstore by Robin Sloan</li>
@@ -44,11 +44,13 @@
         <h2>Drawing Conclusions</h2>
             <p>Suffice to say I am a <strong>huge</strong> fan of animated movies, mysteries, and feel-good fiction.</p>
     </article>
-    <select>
-        <option value="Orange">Orange</option>
-        <option value="strawberry">Strawberry</option>
-        <option value="blueberry">Blueberry</option>
-    </select> 
+        <p class="itemList">
+            <select>
+                <option value="Orange">Orange</option>
+                <option value="strawberry">Strawberry</option>
+                <option value="blueberry">Blueberry</option>
+            </select> 
+        </p>
     <br>
     <br>
     <a href="https://www.youtube.com/channel/UCAWFhV8F8ZMlC6lYh5TTc7A">My Youtube Channel</a>
@@ -107,6 +109,7 @@
     <br>
     <br>
     <br>
+    <a href="#first">Back to Top</a>
 
         
     </body>
