added links to reviews

--- a/Module2Project/MovieReviews.html
+++ b/Module2Project/MovieReviews.html
@@ -7,6 +7,15 @@
                 Popcorn Time
             </h1>
                 <p>In-depth reviews of the latest flicks!</p>
+                <br>
+                <br>
+                <hr>
+            <h4>
+                New Releases
+            </h4>
+                <a href="https://www.rottentomatoes.com/m/tenet">Tenet</a>
+                <hr>
+                <a href="https://www.rottentomatoes.com/m/sound_of_metal">Sound of Metal</a>
         </header>
     </body>
 </html>
