--- a/IntroToHTML/basic.html
+++ b/IntroToHTML/basic.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Introduction to Web Pages</title>
+        <title>HTML Page</title>
     </head>
     <body>
-        Welcome
+        <h1>Title</h1>
+        <h2>Subtitle</h2>
+        <h3>Topic</h3>
+        <h4>Subtopic</h4>
+        <p>
+            Beginning of paragraph text
+            <br /> 
+            <strong>Remaining</strong> text after the 
+            <i>line break</i>
+        </p>
     </body>
 </html>
