added span element

--- a/IntroToHTML/basic2.html
+++ b/IntroToHTML/basic2.html
@@ -15,6 +15,9 @@
         </div>
         <div>
             Notice the text is rendered on new lines
+            <span>
+                SPAN is an inline element rendered on the same line
+            </span>
         </div>
     </body>
 </html>
